# TradingBot_AutoResearch

./: .cursorrules  .env.example  .gitignore  AGENTS.md  README.md  app.py  backtest.py  configs.toml  init.ps1  init.sh  live_trade.py  loop.py  program.md  pyproject.toml  pytest.ini  requirements.txt  scan.py  sync_branches.py
.claude/skills/setup/: SKILL.md
.github/workflows/: _reusable_loop.yml  loop-crypto.yml  loop-stocks.yml  paper.yml  scan.yml  sync_branches.yml  tests.yml
core/: __init__.py  backtest_lib.py  config.py  data_fetch.py  diff_apply.py  git_ops.py  jsonl_logger.py  llm_client.py  process_registry.py  sse_tail.py  webhook.py
dashboard/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.tsbuildinfo  vite.config.ts
dashboard/src/: App.tsx  api.ts  index.css
scripts/: bootstrap.py  verify_stop_condition.py
strategies/: crypto.py  stocks.py
tests/: test_app_endpoints.py  test_backtest_inprocess_parity.py  test_basket_aggregation.py  test_bootstrap_idempotent.py  test_branch_guard.py  test_config_window_resolution.py  test_dashboard_build_artifact.py  test_data_fetch_raises.py  test_diff_apply.py  test_dsr_formula.py  test_git_hook_blocks_loop_commits_to_main.py  test_harness_sync.py  test_jsonl_logger.py  test_live_trade_dry_run.py  test_loop_smoke.py  test_process_registry_signals.py  test_promotion_floors.py  test_scan_emits_signals.py  test_sse_tail.py  test_starter_strategies_run.py  test_webhook_payloads.py  test_workflow_yaml_valid.py
tests/fixtures/: dummy_strategy.py  mock_llm_response.txt  synthetic_data.py
(+7 files in other folders)
